create: wechat-qrcode

--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,6 @@
-WX_APPID = "wx1950a90018f64ca1"
-WX_APPSECRET = "8c0d5206c367f8b2edcbd334b0685e37"
+WX_APPID = "wx8906452bb0c75aee"
+WX_APPSECRET = "bfe50777036cf669f2186a82122e16fa"
+WX_AESKEY = "abcd"
+
+
+REDIS_HOST = "127.0.0.1"
