--- a/api/package.json
+++ b/api/package.json
@@ -6,16 +6,21 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async-redis": "^2.0.0",
+    "co-wechat-api": "^3.11.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "node-uuid": "^1.4.8",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.9",
+    "redis": "^3.1.2",
+    "wechat": "^2.1.0"
   }
 }
