--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.5.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
+    "qrcode.react": "^1.0.1",
     "react": "^16.13.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.13.1",
