--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 WX_APPID = "wx8906452bb0c75aee"
 WX_APPSECRET = "bfe50777036cf669f2186a82122e16fa"
-WX_AESKEY = "abcd"
+WX_AESKEY = ""
 
 
 REDIS_HOST = "127.0.0.1"
