--- a/api/package.json
+++ b/api/package.json
@@ -18,9 +18,11 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "mysql2": "^2.2.5",
     "node-uuid": "^1.4.8",
     "nodemon": "^2.0.9",
     "redis": "^3.1.2",
+    "sequelize": "^6.6.4",
     "wechat": "^2.1.0"
   }
 }
