--- a/api/.env
+++ b/api/.env
@@ -4,3 +4,9 @@ WX_AESKEY = ""
 
 
 REDIS_HOST = "127.0.0.1"
+
+MYSQL_HOST = '127.0.0.1'
+MYSQL_USER = 'root'
+MYSQL_PASS = ''
+MYSQL_DB = 'server2'
+MYSQL_PORT = '3306'
