--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "mobx-react": "^6.2.2",
     "qrcode.react": "^1.0.1",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
